@@ -705,6 +705,7 @@
     - use static libraries on Windows
     - adjusted library dependencies
     - updated libxml2 to 2.9.9 (conan only)
+    - add some more "xpath_expr" examples to mame_regtest.xml
 
     create_report
     - fixed some clang-tidy warnings
